fix overflow scroll on zoom

--- a/PhotographyWebsite/src/app/testimonials/testimonials.component.css
+++ b/PhotographyWebsite/src/app/testimonials/testimonials.component.css
@@ -1,3 +1,7 @@
+.wrapper {
+  overflow: hidden;
+}
+
 .container {
   margin: auto;
   padding: 0;
